# nlambda

./: .ghci  .gitignore  INSTALL  LICENSE  NLambda.cabal  README.md  documentation.sh  install-equality.sh  install-total-order.sh
src/: .gitignore  Formula.hs  Main.hs  NLambda.hs  NLambdaTest.hs  Nominal.hs  Nominal2.hs  Nominal3.hs  NominalIO.hs  SMT.hs  TODO  VariablesSpace.hs
src/Formula/: Solver.hs
src/Nominal/: Atom.hs  Atoms.hs  AtomsSpace.hs  AtomsType.hs  Conditional.hs  Contextual.hs  Either.hs  Formula.hs  Graph.hs  If.hs  Maybe.hs  Meta.hs  Orbit.hs  Set.hs  TestFormula.hs  Type.hs  Variable.hs  VariablesSpace.hs  Variants.hs
src/Nominal/Atoms/: Logic.hs  Signature.hs  Space.hs  Type.hs
src/Nominal/Automaton/: Base.hs  Deterministic.hs  Nondeterministic.hs
src/Nominal/Formula/: Constructors.hs  Definition.hs  Instances.hs  Operators.hs  Quantification.hs  Simplifier.hs  SmtLogger.hs  Solver.hs
src/Nominal/Meta/: CoreLint.hs  Modules.hs  Plugin.hs
src/Nominal/Meta/Control/Exception/: Base.hs
src/Nominal/Meta/Data/: Either.hs  Foldable.hs  Functor.hs  Maybe.hs  MultiMap.hs  OldList.hs  Semigroup.hs  Traversable.hs  Tuple.hs
src/Nominal/Meta/Data/Either/: Utils.hs
src/Nominal/Meta/Data/Functor/: Identity.hs
src/Nominal/Meta/Data/Map/: Internal.hs
src/Nominal/Meta/Data/Set/: Base.hs  Internal.hs
src/Nominal/Meta/Debug/: Trace.hs
src/Nominal/Meta/GHC/: Base.hs  Classes.hs  Enum.hs  Err.hs  Float.hs  Generics.hs  List.hs  Num.hs  Prim.hs  Read.hs  Real.hs  Show.hs  Tuple.hs  Types.hs
src/Nominal/Meta/GHC/Integer/: Type.hs
src/Nominal/Meta/Nominal/: Variable.hs
src/Nominal/Meta/Nominal/Atoms/: Signature.hs
src/Nominal/Meta/Nominal/Util/: Read.hs
src/Nominal/Meta/System/: IO.hs
src/Nominal/Meta/Text/ParserCombinators/: ReadPrec.hs
src/Nominal/Text/: Symbols.hs
src/Nominal/Util/: InsertionSet.hs  Read.hs  UnionFind.hs
src/Tests/: .gitignore  ImportClass.hs  ImportData.hs  ImportInstance.hs  MetaPlugin.hs  NLambda.hs  RunMetaPlugin.hs  RunNLambda.hs  Test.hs  Tests.hs  nlambda_tests.hs  nlambda_tests.sh  plugin_tests.sh  tests.sh
src/meta/: .gitignore  Main  Main.hi  Main.hs  Meta.hi  Meta.hs  MetaAtom.hs  MetaPlugin.hi  MetaPlugin.hs  MetaPrelude.hs  NLambdaConvert.java  Run.hs  Sample.hi  Sample.hs  SampleImport.hs  TODO  Test.hs  TestImportClass.hs  TestImportData.hs  TestImportInstance.hs  Tests.hs  Var.hs  main.sh  meta.sh  run.sh  tests.sh
src/test/: Nominal.hs  Test.hs
test/: Bench.hs  Spec.hs
