name:		   NLambda
version:	   1.0
build-type:        Simple
cabal-version:     >= 1.2
author:            M.Szynwelski, B.Klin
license:           BSD3
license-file:      LICENSE
copyright:         (c) 2015-2016, M.Szynwelski, B.Klin

Flag TOTAL_ORDER
  description: Set atoms type with total order
  default:     False

Library
  build-depends:   
    attoparsec,
    base,
    bytestring,
    containers,
    directory,
    MissingH,
    mtl,
    multimap,
    process-extras
  hs-source-dirs:  src
  exposed-modules: NLambda
  if flag(TOTAL_ORDER)
    cpp-options: -DTOTAL_ORDER
  other-modules:
    NLambdaTest,
    Nominal.Atoms,
    Nominal.Atoms.Logic,
    Nominal.Atoms.Signature,
    Nominal.Atoms.Space,
    Nominal.Automaton.Base,
    Nominal.Automaton.Deterministic,
    Nominal.Automaton.Nondeterministic,
    Nominal.Conditional,
    Nominal.Contextual,
    Nominal.Either,
    Nominal.Formula,
    Nominal.Formula.Constructors
    Nominal.Formula.Definition
    Nominal.Formula.Operators
    Nominal.Formula.Quantification
    Nominal.Formula.Solver
    Nominal.Graph,
    Nominal.Maybe,
    Nominal.Orbit,
    Nominal.Set,
    Nominal.Type,
    Nominal.Util.InsertionSet,
    Nominal.Util.UnionFind,
    Nominal.Variable,
    Nominal.Variants
