name:              NLambda
version:           1.1.3
build-type:        Simple
cabal-version:     >= 1.8
author:            M.Szynwelski, B.Klin, J.Moerman
license:           BSD3
license-file:      LICENSE
copyright:         (c) 2015-2023, M.Szynwelski, B.Klin

Flag TOTAL_ORDER
  description: Set atoms type with total order
  default:     False

Library
  build-depends:
    attoparsec,
    base >= 4.7 && < 5,
    bytestring,
    containers,
    directory,
    hslogger,
    mtl,
    multimap,
    process-extras,
    split
  hs-source-dirs:  src
  exposed-modules: NLambda
  if flag(TOTAL_ORDER)
    cpp-options: -DTOTAL_ORDER
  if os(windows)
    cpp-options: -DDISABLE_UNICODE
  other-modules:
    Nominal.Atoms,
    Nominal.Atoms.Logic,
    Nominal.Atoms.Signature,
    Nominal.Atoms.Space,
    Nominal.Automaton.Base,
    Nominal.Automaton.Deterministic,
    Nominal.Automaton.Nondeterministic,
    Nominal.Conditional,
    Nominal.Contextual,
    Nominal.Either,
    Nominal.Formula,
    Nominal.Formula.Constructors
    Nominal.Formula.Definition
    Nominal.Formula.Operators
    Nominal.Formula.Quantification
    Nominal.Formula.Solver
    Nominal.Formula.SmtLogger
    Nominal.Graph,
    Nominal.If,
    Nominal.Maybe,
    Nominal.Orbit,
    Nominal.Set,
    Nominal.Type,
    Nominal.Util.InsertionSet,
    Nominal.Util.Read,
    Nominal.Util.UnionFind,
    Nominal.Variable,
    Nominal.Variants,
    Nominal.Text.Symbols

Test-suite test
  hs-source-dirs:  test
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  ghc-options:     -Wall
  build-depends:
    base >= 4.7 && < 5,
    NLambda,
    tasty,
    tasty-hunit

Benchmark bench
  hs-source-dirs:  test
  type:            exitcode-stdio-1.0
  main-is:         Bench.hs
  ghc-options:     -O2 -Wall
  build-depends:
    base >= 4.7 && < 5,
    NLambda,
    tasty,
    tasty-bench
